Showing first 3DS

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.swing-app-framework.classpath}:\
-    ${libs.3dsloader.classpath}
+    ${libs.3dsloader2.classpath}:\
+    ${libs.j3d.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
