Multiple view of model

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -1,5 +1,11 @@
 # To change this template, choose Tools | Templates
 # and open the template in the editor.
 
-jMenu2.text=Edit
+jMenu2.text=View
 jMenu1.text=File
+TopViewOption.text=Top
+RightViewOption.text=Right
+FrontViewOption.text=Left
+topViewButton.text=Top
+rightViewButton.text=Right
+frontViewButton.text=Left
