--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -1,11 +1,6 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
-jMenu2.text=View
 jMenu1.text=File
-TopViewOption.text=Top
-RightViewOption.text=Right
-FrontViewOption.text=Left
 topViewButton.text=Top
 rightViewButton.text=Right
-frontViewButton.text=Left
+frontViewButton.text=Front
+rightViewButton1.text=Right
+addSurfaceButton.label=Add Surface
