--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,16 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}:\
     ${libs.3dsloader2.classpath}:\
-    ${libs.j3d.classpath}
+    ${libs.j3d.classpath}:\
+    ${libs.swing-app-framework.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.5
-javac.target=1.5
+javac.source=1.6
+javac.target=1.6
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
