Save to file Geometry Header

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -1,6 +1,7 @@
-jMenu1.text=File
 topViewButton.text=Top
 rightViewButton.text=Right
 frontViewButton.text=Front
 rightViewButton1.text=Right
 addSurfaceButton.label=Add Surface
+jMenu1.text=File
+fileSaveAsMenuItem.text=Save As...
