--- a/src/com/abajar/crrcsimeditor/resources/GeometryEditor.properties
+++ b/src/com/abajar/crrcsimeditor/resources/GeometryEditor.properties
@@ -1,3 +1,5 @@
 
 jToggleButton1.text=jToggleButton1
 addSurfaceButton.text=Add Surface
+addSectionButton.text=Add Section
+addControlButton.text=Add Control
