Save, Open file, export as AVL and little refactor to MVC

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -4,4 +4,7 @@ frontViewButton.text=Front
 rightViewButton1.text=Right
 addSurfaceButton.label=Add Surface
 jMenu1.text=File
-fileSaveAsMenuItem.text=Save As...
+addSurfaceButton.text=Edit
+fileExportAsAVLMenuItem.text=Export As AVL
+jMenuItem1.text=Save As...
+fileOpenMenuItem.text=Open...
