--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,7 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
+ant.customtasks.libs=JWSAntTasks
 application.desc=A simple java desktop application based on Swing Application Framework
 application.homepage=http://appframework.dev.java.net
 application.title=Basic Application Example
@@ -23,13 +24,16 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/CRRCsimEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${file.reference.javaws.jar}
 excludes=
+file.reference.javaws.jar=C:\\Archivos de programa\\Java\\jdk1.6.0_20\\jre\\lib\\javaws.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.3dsloader2.classpath}:\
-    ${libs.j3d.classpath}:\
     ${libs.swing-app-framework.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -54,6 +58,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.descriptor=application
+jnlp.enabled=true
+jnlp.ext.resource.0.href=http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp
+jnlp.ext.resource.0.name=java3d
+jnlp.ext.resource.0.version=
+jnlp.mixed.code=defaut
+jnlp.offline-allowed=true
+jnlp.signed=true
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
