Fix problem with remote execution jnlp

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -2,10 +2,10 @@ annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 ant.customtasks.libs=JWSAntTasks
-application.desc=A simple java desktop application based on Swing Application Framework
-application.homepage=http://appframework.dev.java.net
-application.title=Basic Application Example
-application.vendor=Sun Microsystems Inc.
+application.desc=A model editor for CRRCsim http://crrcsim.berlios.de/wiki/
+application.homepage=http://crrcsimeditor.sf.net
+application.title=CRRCSimEditor
+application.vendor=Abajar.com
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -58,7 +58,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=local
+jnlp.codebase.type=user
+jnlp.codebase.user=http://localhost/crrcsimeditor/
 jnlp.descriptor=application
 jnlp.enabled=true
 jnlp.ext.resource.0.href=http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp
