--- a/src/com/abajar/crrcsimeditor/resources/CRRCsimEditor.properties
+++ b/src/com/abajar/crrcsimeditor/resources/CRRCsimEditor.properties
@@ -1,9 +1,14 @@
-# To change this template, choose Tools | Templates
-# and open the template in the editor.
-
 #NOI18N
-Application.lookAndFeel=
+Application.lookAndFeel=system
 #NOI18N
 Application.id=
 #NOI18N
 Application.vendorId=
+#NOI18N
+Application.vendor=Abajar.com
+#NOI18N
+Application.title=CRRCSimEditor
+#NOI18N
+Application.description=A model editor for CRRCsim http://crrcsim.berlios.de/wiki/
+#NOI18N
+Application.homepage=http://crrcsimeditor.sf.net
