--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jnlp.codebase.type=user
-jnlp.codebase.user=http://localhost/crrcsimeditor/
+jnlp.codebase.user=http://crrcsimeditor.sf.net/
 jnlp.descriptor=application
 jnlp.enabled=true
 jnlp.ext.resource.0.href=http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp
