Save as XML and AVLRunner

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -8,3 +8,6 @@ addSurfaceButton.text=Edit
 fileExportAsAVLMenuItem.text=Export As AVL
 jMenuItem1.text=Save As...
 fileOpenMenuItem.text=Open...
+fileExportAsCRRsimMenuItem.text=Export As CRRsim XML
+jMenu2.text=Edit
+editSetAvlExecutableMenuItem.text=Set AVL Executable
