Delete components and run AVL

--- a/src/com/abajar/crrcsimeditor/resources/GeometryEditor.properties
+++ b/src/com/abajar/crrcsimeditor/resources/GeometryEditor.properties
@@ -4,3 +4,4 @@ addSurfaceButton.text=Add Surface
 addSectionButton.text=Add Section
 addControlButton.text=Add Control
 addMassButton.text=Add Mass
+deleteButton.text=Delete
