--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -7,7 +7,11 @@ fileOpenMenuItem.text=Open...
 fileExportAsCRRsimMenuItem.text=Export As CRRsim XML
 jMenu2.text=Edit
 editSetAvlExecutableMenuItem.text=Set AVL Executable
-addSurfaceButton.text=Edit
 rightViewButton.text=Right
 frontViewButton.text=Front
 topViewButton.text=Top
+deleteButton.text=Delete
+addMassButton.text=Add Mass
+addControlButton.text=Add Control
+addSectionButton.text=Add Section
+addSurfaceButton.text=Add Surface
