Adding help info to editor and AFOIL parameter

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -15,3 +15,4 @@ addMassButton.text=Add Mass
 addControlButton.text=Add Control
 addSectionButton.text=Add Section
 addSurfaceButton.text=Add Surface
+helpTextArea.text=AVL Documentation\nhttp://web.mit.edu/drela/Public/web/avl/avl_doc.txt\n\nCRRCsim AVL Documentation\nhttp://sourceforge.net/apps/mediawiki/crrcsim/index.php?title=CreatingAirFiles\n\nhttp://jeklink.net/projects/crrcsim_avl_guide.html\n
