--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,16 +25,24 @@ dist.dir=dist
 dist.jar=${dist.dir}/CRRCsimEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
-    ${file.reference.javaws.jar}
+    ${file.reference.javaws.jar-1}
 excludes=
+file.reference.j3dcore.jar=lib/j3dcore.jar
+file.reference.j3dutils.jar=lib/j3dutils.jar
 file.reference.javaws.jar=C:\\Archivos de programa\\Java\\jdk1.6.0_20\\jre\\lib\\javaws.jar
+file.reference.javaws.jar-1=C:\\development\\java\\jdk1.6.0_33\\jre\\lib\\javaws.jar
+file.reference.Loader3DS1_2.jar=lib/Loader3DS1_2.jar
+file.reference.vecmath.jar=lib/vecmath.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.3dsloader2.classpath}:\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.Loader3DS1_2.jar}:\
+    ${file.reference.j3dcore.jar}:\
+    ${file.reference.j3dutils.jar}:\
+    ${file.reference.vecmath.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +85,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
+run.jvmargs=-Djava.library.path="./lib"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
