Fixing geting avl values

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,12 +25,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/CRRCsimEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
-    ${file.reference.javaws.jar-1}
+    ${file.reference.javaws.jar-2}
 excludes=
 file.reference.j3dcore.jar=lib/j3dcore.jar
 file.reference.j3dutils.jar=lib/j3dutils.jar
 file.reference.javaws.jar=C:\\Archivos de programa\\Java\\jdk1.6.0_20\\jre\\lib\\javaws.jar
 file.reference.javaws.jar-1=C:\\development\\java\\jdk1.6.0_33\\jre\\lib\\javaws.jar
+file.reference.javaws.jar-2=C:\\development\\java\\jdk1.7.0_45\\jre\\lib\\javaws.jar
 file.reference.Loader3DS1_2.jar=lib/Loader3DS1_2.jar
 file.reference.vecmath.jar=lib/vecmath.jar
 includes=**
@@ -78,14 +79,14 @@ jnlp.signed=true
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.library.path="./lib"
+run.jvmargs=-Djava.library.path="./lib" -Djava.util.logging.config.file=logging.properties
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
