Downgrade to java6

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -24,8 +24,7 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/CRRCsimEditor.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=\
-    ${file.reference.javaws.jar-2}
+endorsed.classpath=
 excludes=
 file.reference.j3dcore.jar=lib/j3dcore.jar
 file.reference.j3dutils.jar=lib/j3dutils.jar
@@ -69,7 +68,7 @@ javadoc.windowtitle=
 jnlp.codebase.type=user
 jnlp.codebase.user=http://crrcsimeditor.sf.net/
 jnlp.descriptor=application
-jnlp.enabled=true
+jnlp.enabled=false
 jnlp.ext.resource.0.href=http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp
 jnlp.ext.resource.0.name=java3d
 jnlp.ext.resource.0.version=
@@ -79,7 +78,7 @@ jnlp.signed=true
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
