Fix problems running outside netbeans

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,11 +38,11 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.swing-app-framework.classpath}:\
     ${file.reference.Loader3DS1_2.jar}:\
     ${file.reference.j3dcore.jar}:\
     ${file.reference.j3dutils.jar}:\
-    ${file.reference.vecmath.jar}
+    ${file.reference.vecmath.jar}:\
+    ${libs.swing-app-framework.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,16 +65,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=user
-jnlp.codebase.user=http://crrcsimeditor.sf.net/
+jnlp.codebase.type=no.codebase
 jnlp.descriptor=application
 jnlp.enabled=false
-jnlp.ext.resource.0.href=http://download.java.net/media/java3d/webstart/release/java3d-latest.jnlp
-jnlp.ext.resource.0.name=java3d
-jnlp.ext.resource.0.version=
 jnlp.mixed.code=defaut
-jnlp.offline-allowed=true
-jnlp.signed=true
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
