Adding changelog and description

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -18,3 +18,4 @@ addSurfaceButton.text=Add Surface
 helpTextArea.text=AVL Documentation\nhttp://web.mit.edu/drela/Public/web/avl/avl_doc.txt\n\nCRRCsim AVL Documentation\nhttp://sourceforge.net/apps/mediawiki/crrcsim/index.php?title=CreatingAirFiles\n\nhttp://jeklink.net/projects/crrcsim_avl_guide.html\n
 addBodyButton.text=Add Body
 addSurfaceButton.AccessibleContext.accessibleName=Add Surface
+addChangeLogButton.text=Add Change Log
