Adding crrcsim fields

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.run.all.processors=true
 ant.customtasks.libs=JWSAntTasks
 application.desc=A model editor for CRRCsim http://crrcsim.berlios.de/wiki/
-application.homepage=http://crrcsimeditor.sf.net
+application.homepage=https://github.com/TLmaK0/avl-crrcsim-editor
 application.title=CRRCSimEditor
 application.vendor=Abajar.com
 build.classes.dir=${build.dir}/classes
