--- a/src/com/abajar/crrcsimeditor/resources/CRRCsimEditor.properties
+++ b/src/com/abajar/crrcsimeditor/resources/CRRCsimEditor.properties
@@ -11,4 +11,4 @@ Application.title=CRRCSimEditor
 #NOI18N
 Application.description=A model editor for CRRCsim http://crrcsim.berlios.de/wiki/
 #NOI18N
-Application.homepage=http://crrcsimeditor.sf.net
+Application.homepage=https://github.com/TLmaK0/avl-crrcsim-editor
