--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -19,3 +19,4 @@ helpTextArea.text=AVL Documentation\nhttp://web.mit.edu/drela/Public/web/avl/avl
 addBodyButton.text=Add Body
 addSurfaceButton.AccessibleContext.accessibleName=Add Surface
 addChangeLogButton.text=Add Change Log
+addChangeButton1.text=Add Change Log
