Adding UI engine buttons and fix save engine data

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -20,3 +20,8 @@ addBodyButton.text=Add Body
 addSurfaceButton.AccessibleContext.accessibleName=Add Surface
 addChangeLogButton.text=Add Change Log
 addChangeButton1.text=Add Change Log
+addBatteryButton.text=Add Battery
+addShaftButton.text=Add Shaft
+addEngineButton.text=Add Engine
+addDataButton.text=Add Engine Data
+addDataIdleButton.text=Add Engine Idle Data
