Adding simple trust

--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -25,3 +25,4 @@ addShaftButton.text=Add Shaft
 addEngineButton.text=Add Engine
 addDataButton.text=Add Engine Data
 addDataIdleButton.text=Add Engine Idle Data
+addSimpleTrustButton.text=Add Simple Trust
