--- a/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
+++ b/src/com/abajar/crrcsimeditor/resources/MainFrame.properties
@@ -26,3 +26,4 @@ addEngineButton.text=Add Engine
 addDataButton.text=Add Engine Data
 addDataIdleButton.text=Add Engine Idle Data
 addSimpleTrustButton.text=Add Simple Trust
+addWhellButton.text=Add Wheel
