Fix serialization to crrcsim

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ excludes=
 file.reference.javaws.jar=C:\\Archivos de programa\\Java\\jdk1.6.0_20\\jre\\lib\\javaws.jar
 file.reference.javaws.jar-1=C:\\development\\java\\jdk1.6.0_33\\jre\\lib\\javaws.jar
 file.reference.javaws.jar-2=C:\\development\\java\\jdk1.7.0_45\\jre\\lib\\javaws.jar
+file.reference.org.eclipse.persistence.core_2.4.2.v20130514-5956486.jar=lib\\org.eclipse.persistence.core_2.4.2.v20130514-5956486.jar
+file.reference.org.eclipse.persistence.moxy.jar=lib\\org.eclipse.persistence.moxy.jar
 file.reference.vecmath.jar=lib/vecmath.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -36,7 +38,9 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.vecmath.jar}:\
-    ${libs.swing-app-framework.classpath}
+    ${libs.swing-app-framework.classpath}:\
+    ${file.reference.org.eclipse.persistence.core_2.4.2.v20130514-5956486.jar}:\
+    ${file.reference.org.eclipse.persistence.moxy.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
