--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,10 @@
 <project name="CRRCsimEditor" default="default" basedir=".">
     <description>Builds, tests, and runs the project CRRCsimEditor.</description>
     <import file="nbproject/build-impl.xml"/>
+    <target name="-post-jar">
+        <copy file="bin/run.bat" todir="${dist.jar.dir}"/>
+        <zip destfile="${dist.jar.dir}/${application.title}.zip" basedir="${dist.jar.dir}" />
+    </target>
     <!--
 
     There exist several targets which are by default empty and which can be 
