--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,8 +46,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -72,7 +72,7 @@ jnlp.signed=false
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=JDK_1.7
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
