--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -72,7 +72,7 @@ jnlp.signed=false
 main.class=com.abajar.crrcsimeditor.CRRCsimEditor
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
-platform.active=default_platform
+platform.active=JDK_1.7
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
